--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,281 @@ body {
   height: 100vh;
 }
 
+
+/* 연희 */
+
+.macbook-pro {
+background-color: #ffffff;
+display: flex;
+flex-direction: row;
+justify-content: center;
+width: 100%;
+}
+
+.macbook-pro .overlap-group-wrapper {
+background-color: #ffffff;
+overflow: hidden;
+width: 1728px;
+height: 3248px;
+}
+
+.macbook-pro .overlap-group {
+position: relative;
+width: 2345px;
+height: 3897px;
+top: -119px;
+left: -257px;
+}
+
+.macbook-pro .rectangle {
+position: absolute;
+width: 3627px;
+height: 2345px;
+top: 641px;
+left: -641px;
+background-color: #ffd653;
+transform: rotate(90deg);
+}
+
+.macbook-pro .div {
+position: absolute;
+width: 246px;
+height: 931px;
+top: 119px;
+left: 139px;
+background-color: #006ad5;
+border-radius: 0px 0px 156.5px 156.5px;
+}
+
+.macbook-pro .rectangle-2 {
+position: absolute;
+width: 245px;
+height: 741px;
+top: 119px;
+left: 385px;
+background-color: #006ad5;
+border-radius: 0px 0px 157px 157px;
+}
+
+.macbook-pro .rectangle-3 {
+position: absolute;
+width: 246px;
+height: 840px;
+top: 119px;
+left: 629px;
+background-color: #006ad5;
+border-radius: 0px 0px 157px 157px;
+}
+
+.macbook-pro .rectangle-4 {
+position: absolute;
+width: 245px;
+height: 924px;
+top: 119px;
+left: 875px;
+background-color: #006ad5;
+border-radius: 0px 0px 156.5px 156.5px;
+}
+
+.macbook-pro .rectangle-5 {
+position: absolute;
+width: 245px;
+height: 893px;
+top: 119px;
+left: 1366px;
+background-color: #006ad5;
+border-radius: 0px 0px 157px 157px;
+}
+
+.macbook-pro .rectangle-6 {
+position: absolute;
+width: 246px;
+height: 741px;
+top: 119px;
+left: 1120px;
+background-color: #006ad5;
+border-radius: 0px 0px 157px 157px;
+}
+
+.macbook-pro .rectangle-7 {
+position: absolute;
+width: 246px;
+height: 787px;
+top: 119px;
+left: 1610px;
+background-color: #006ad5;
+border-radius: 0px 0px 156.5px 156.5px;
+}
+
+.macbook-pro .rectangle-8 {
+position: absolute;
+width: 246px;
+height: 931px;
+top: 119px;
+left: 1856px;
+background-color: #006ad5;
+border-radius: 0px 0px 157px 157px;
+}
+
+.macbook-pro .nevertheless {
+position: absolute;
+top: 342px;
+left: 841px;
+font-family: "Gowun Batang-Regular", Helvetica;
+font-weight: 400;
+color: #ffffff;
+font-size: 24px;
+text-align: center;
+letter-spacing: 0;
+line-height: 24px;
+}
+
+.macbook-pro .text-wrapper {
+line-height: 38.4px;
+}
+
+.macbook-pro .span {
+line-height: 28.1px;
+}
+
+.macbook-pro .text-wrapper-2 {
+position: absolute;
+top: 228px;
+left: 968px;
+-webkit-text-stroke: 0.5px #000000;
+font-family: "Gowun Batang-Regular", Helvetica;
+font-weight: 400;
+color: #000000;
+font-size: 48px;
+letter-spacing: 0;
+line-height: 76.8px;
+white-space: nowrap;
+}
+
+.macbook-pro .NE-VER-THE-LESS {
+position: absolute;
+width: 987px;
+top: 2640px;
+left: 1011px;
+font-family: "Microsoft Sans Serif-Regular", Helvetica;
+font-weight: 400;
+color: #ffffff99;
+font-size: 190px;
+text-align: right;
+letter-spacing: 19px;
+line-height: 188.1px;
+}
+
+.macbook-pro .b {
+position: absolute;
+width: 298px;
+top: 1233px;
+left: 232px;
+font-family: "Microsoft Sans Serif-Regular", Helvetica;
+font-weight: 400;
+color: #ffffff99;
+font-size: 200px;
+letter-spacing: 0;
+line-height: 158px;
+}
+
+.macbook-pro .text-wrapper-3 {
+font-family: "Microsoft Sans Serif-Regular", Helvetica;
+font-weight: 400;
+color: #ffffff99;
+font-size: 200px;
+letter-spacing: 0;
+line-height: 158px;
+}
+
+.macbook-pro .text-wrapper-4 {
+font-size: 220px;
+line-height: 173.8px;
+}
+
+.macbook-pro .rectangle-9{
+position: absolute;
+width: 494px;
+height: 257px;
+top: 1105px;
+left: 338px;
+background-color: #ffffff4c;
+border-radius: 74px;
+border: 5px solid;
+border-color: #000000;
+}
+
+.macbook-pro .rectangle-10{
+position: absolute;
+width: 494px;
+height: 257px;
+top: 1105px;
+left: 874px;
+background-color: #ffffff4c;
+border-radius: 74px;
+border: 5px solid;
+border-color: #000000;
+}
+
+.macbook-pro .rectangle-11{
+position: absolute;
+width: 494px;
+height: 257px;
+top: 1105px;
+left: 1410px;
+background-color: #ffffff4c;
+border-radius: 74px;
+border: 5px solid;
+border-color: #000000;
+}
+
+.macbook-pro .text-wrapper-5{
+top: 1207px;
+left: 435px;
+-webkit-text-stroke: 1px #000000;
+font-size: 45px;
+text-align: right;
+letter-spacing: 4.5px;
+line-height: 44.6px;
+position: absolute;
+font-family: "Gowun Batang-Regular", Helvetica;
+font-weight: 400;
+color:#000000;
+white-space: nowrap;
+}
+
+.macbook-pro .text-wrapper-6{
+top: 1207px;
+left: 990px;
+-webkit-text-stroke: 1px #000000;
+font-size: 45px;
+text-align: right;
+letter-spacing: 4.5px;
+line-height: 44.6px;
+position: absolute;
+font-family:"Gowun Batang-Regular", Helvetica;
+font-weight: 400;
+color:#000000;
+white-space: nowrap;
+}
+
+.macbook-pro .text-wrapper-7{
+top: 1207px;
+left: 1520px;
+-webkit-text-stroke: 1px #000000;
+font-size: 45px;
+text-align: right;
+letter-spacing: 4.5px;
+line-height: 44.6px;
+position: absolute;
+font-family: "Gowun Batang-Regular", Helvetica;
+font-weight: 400;
+color:#000000;
+white-space: nowrap;
+}
+
+/* 연희 */
+
 /* mainPage cardSection */
 .mainCards {
   width: 75vw;
