--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
     padding-right: 20px;
 }
 
-.picture {
+.logo {
     width: 300px;
     height: 100px;
     background-image: url('https://ifh.cc/g/31dCk4.png');
