--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,17 @@ body {
 /* 공통 nd */
 
 /* 운성 */
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .header {
+    position: fixed;
+    top: 0;
+    z-index: 1000;
     width: 100%;
     height: 100px;
     display: flex;
@@ -96,40 +106,12 @@ a:hover {
 .title {
     color: white;
     padding-right: 20px;
-}
-#go {
-    height: 300px;
-    margin-top: 600px;
-    padding: 20px;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
+    cursor: pointer; /* 손 모양 커서 추가 */
+    text-decoration: none; /* 밑줄 제거 */
 }
 
-#go2 {
-    height: 300px;
-    margin-top: 0%;
-    padding: 20px;
-    text-align: center;
-}
-
-.zone {
-    width: 25%;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid black;
-    position: relative;
-}
-.zone p {
-    position: absolute;
-    top: 0px;
-    left: 10px;
-    color: black;
-    font-size: 16px;
-    font-weight: bold;
-    transition: all 0.5s ease;
+.title:hover {
+    text-decoration: underline; /* 마우스 오버 시 밑줄 효과 */
 }
 
 .List {
@@ -482,27 +464,26 @@ a:hover {
 
 /* 현우 작업본 */
 .item {
-  width: 360px;
-  height: 315px;
-  border: 1px solid black;
-  text-align: center;
+    width: 360px;
+    height: 315px;
+    border: 1px solid black;
+    text-align: center;
 
-  margin: 20px right 20px auto;
-  h2 {
-    border-bottom: 1px solid black;
-  }
+    margin: 20px right 20px auto;
+    h2 {
+        border-bottom: 1px solid black;
+    }
 }
 
 .container {
-  display: flex;
-  gap: 20px;
+    display: flex;
+    gap: 20px;
 
-  align-items: stretch;
-  
+    align-items: stretch;
 }
 .container-wrapper {
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
