--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body {
     padding-right: 20px;
 }
 
-.logo {
+.bo5 {
     width: 300px;
     height: 100px;
     background-image: url('https://ifh.cc/g/31dCk4.png');
