--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,8 @@ body {
     background-color: #333333;
     padding-right: 20px;
 }
-
-.bo5 {
+s
+.logo {
     width: 300px;
     height: 100px;
     background-image: url('https://ifh.cc/g/31dCk4.png');
@@ -148,7 +148,7 @@ p {
     color: #333333;
 }
 
-.logo {
+.bo5 {
    
     opacity: 0.1;
     font-size: 300px;
