--- a/css/윤서.css
+++ b/css/윤서.css
@@ -74,10 +74,12 @@ a:hover {
 
 /* 현우 작업본 */
 .item {
-  width: 360px;
-  height: 315px;
+  width: 350px;
+  height: 350px;
   border: 1px solid black;
+  border-radius: 50px;
   text-align: center;
+  background-color: white;
 
   margin: 20px right 20px auto;
   h2 {
@@ -103,8 +105,8 @@ a:hover {
   height: fit-content;
 
   padding: 30px;
-  box-shadow: 0px 0px 3px 0px black;
-  border-radius: 5px;
+  box-shadow: 0px 0px 3px 0px rgb(2, 124, 195);
+  border-radius: 50px;
   background-color: white;
 
   justify-content: center;
@@ -137,3 +139,13 @@ a:hover {
 
   text-align: center;
 }
+
+.mainbox {
+  padding-top: 200px;
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        align-items: center;
+        background-image: url(https://img.freepik.com/premium-photo/background-blue-sky-and-white-clouds-4_280388-1179.jpg);
+        background-size: cover;
+} 
