--- a/css/hyun.css
+++ b/css/hyun.css
@@ -76,14 +76,15 @@ body {
   .item {
     width: 350px;
     height: 350px;
-    border: 1px solid black;
+    border: 4mm ridge #94e0ff;
     border-radius: 50px;
     text-align: center;
     background-color: white;
+    box-shadow: 0px 0px 3px 0px rgb(2, 124, 195);
   
     margin: 20px right 20px auto;
     h2 {
-      border-bottom: 1px solid black;
+      border-bottom: 4mm ridge skyblue;
     }
   }
   
@@ -116,7 +117,7 @@ body {
     height: 300px;
   
     margin: 30px auto 0px auto;
-    box-shadow: 0px 0px 3px 0px black;
+    box-shadow: 0px 0px 3px 1.5px #94e0ff;
     border-radius: 50%;
     overflow: hidden;
     position: relative;
@@ -144,7 +145,7 @@ body {
     padding-top: 200px;
           display: flex;
           justify-content: center;
-          gap: 30px;
+          gap: 150px;
           align-items: center;
           background-image: url(https://img.freepik.com/premium-photo/background-blue-sky-and-white-clouds-4_280388-1179.jpg);
           background-size: cover;
