--- a/css/sparta.css
+++ b/css/sparta.css
@@ -1,4 +1,3 @@
-/* 개인 페이지st */
 /* 운성 작업본 */
 body {
   margin: 0;
@@ -75,15 +74,17 @@ a:hover {
 
 /* 현우 작업본 */
 .item {
-  width: 400px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
+  border: 3mm ridge #94e0ff;
   border-radius: 50px;
   text-align: center;
   background-color: white;
-  box-shadow: 0px 0px 5px 0px #006ad5;
+  box-shadow: 0px 0px 3px 0px rgb(2, 124, 195);
+
   margin: 20px right 20px auto;
   h2 {
-    border-bottom: 1px solid #006ad5;
+    border-bottom: 2mm ridge skyblue;
   }
 }
 
@@ -100,36 +101,32 @@ a:hover {
   gap: 20px;
 }
 /* 윤서 작업본 */
-.mainbox {
-  padding-top: 200px;
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-  align-items: center;
-  background-color: white;
-  background-size: cover;
-}
 .mypostingbox {
   width: 400px;
   height: fit-content;
 
   padding: 30px;
+  box-shadow: 0px 0px 3px 0px rgb(2, 124, 195);
   border-radius: 50px;
-  background-color: #f9f9f9;
-  box-shadow: 0px 0px 5px 0px #006ad5;
+  background-color: white;
 
   justify-content: center;
 }
 .myimg {
   width: 300px;
   height: 300px;
-
   margin: 30px auto 0px auto;
-  box-shadow: 0px 0px 3px 0px black;
+  box-shadow: 0px 0px 3px 1.5px #94e0ff;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
+  img {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+  }
 }
+
 .moge {
   height: 200px;
   font-family: "Jua", sans-serif;
@@ -147,4 +144,14 @@ a:hover {
   margin: 20px;
 
   text-align: center;
+}
+
+.mainbox {
+  padding-top: 200px;
+  display: flex;
+  justify-content: center;
+  gap: 120px;
+  align-items: center;
+  background-image: url(https://img.freepik.com/premium-photo/background-blue-sky-and-white-clouds-4_280388-1179.jpg);
+  background-size: cover;
 }
