--- a/css/sparta.css
+++ b/css/sparta.css
@@ -116,7 +116,7 @@ a:hover {
   width: 300px;
   height: 300px;
   margin: 30px auto 0px auto;
-  box-shadow: 0px 0px 3px 1.5px #94e0ff;
+  box-shadow: 0px 0px 3px 1.5px #3c3c3c;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
