--- a/css/style.css
+++ b/css/style.css
@@ -63,12 +63,21 @@ body {
     top: 0;
     z-index: 1000;
     width: 100%;
-    height: 100px;
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     background-color: #006ad5;
     padding-right: 20px;
+}
+
+.logo {
+    width: 300px;
+    height: 80px;
+    background-image: url('https://ifh.cc/g/gz9Has.jpg');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .menu {
