--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,8 @@ h1 {
   padding: 20px;
   margin-bottom: 20px;
   background-color: #f5faffc9;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 .mainCardImgBox {
   display: flex;
@@ -305,6 +307,19 @@ h1 {
   font-weight: 700;
   color: #006ad5;
   font-size: 2rem;
+}
+
+.mainCardsContact ul {
+  padding: 0;
+}
+.mainCardsContact ul li {
+  font-size: 0.8rem;
+  line-height: 1.4rem;
+}
+.mainCardsContact ul li a {
+  text-decoration: none;
+  color: #333;
+  cursor: pointer;
 }
 
 .mainCardsContents {
@@ -363,7 +378,7 @@ h1 {
 .mainCardsTxtBox div {
   margin-left: 40px;
 }
-mainCard .mainCardsTxtBox div .title {
+.mainCard .mainCardsTxtBox div .title {
   background-color: #fff;
   font-size: 1.2rem;
   margin: 0;
