--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,6 @@ h1 {
 /* mainPage cardSection */
 .mainCards {
   margin: 80px 0;
-  padding: 20px;
 }
 .mainCard {
   display: flex;
@@ -277,11 +276,10 @@ h1 {
   border-radius: 5px;
   justify-content: space-between;
   width: 100%;
+  max-width: 1000px;
   padding: 20px;
-  margin-bottom: 20px;
   background-color: #f5faffc9;
-  max-width: 1100px;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 .mainCardImgBox {
   display: flex;
