--- a/css/style.css
+++ b/css/style.css
@@ -131,139 +131,168 @@ a:hover {
 @import url(//fonts.googleapis.com/css?family=Lato:300:400);
 
 body {
-  margin: 0;
+    margin: 0;
 }
 
 /* 글자들 */
 h1 {
-  font-family: "Lato", sans-serif;
-  font-weight: 300;
-  letter-spacing: 2px;
-  font-size: 48px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    letter-spacing: 2px;
+    font-size: 48px;
 }
 
-.main p {
-  font-family: "Lato", sans-serif;
-  letter-spacing: 2px;
-  font-size: 20px;
-  color: #333333;
+p {
+    font-family: 'Lato', sans-serif;
+    letter-spacing: 2px;
+    font-size: 20px;
+    color: #333333;
 }
 
-.bo5 {
-  opacity: 0.1;
-  font-size: 300px;
-  width: 50px;
-  fill: white;
-  padding-right: 15px;
-  display: inline-block;
-  vertical-align: middle;
+.ourgoal {
+
+    opacity: 0.1;
+    font-size: 150px;
+    width: 50px;
+    fill: white;
+    padding-right: 3%;
+    padding-top: 20%;
+    display: inline-block;
+    vertical-align: middle;
+    white-space: nowrap;
 }
+
+.ourname {
+    text-decoration-line: underline;
+    text-decoration-color: #006AD5;
+    text-decoration-style: double;
+    text-decoration-thickness: 0.8px;
+}
+
+
 
 /* 모형들 */
 
 .main {
-  position: fixed;
-  position: relative;
-  text-align: center;
-  background-color: #006ad5;
-  color: white;
+    position: fixed;
+    position: relative;
+    text-align: center;
+    background-color: #006AD5;
+    color: white;
+
+
 }
 
 .withoutwave {
-  height: 65vh;
-  width: 100%;
-  margin: 0;
-  padding: 0;
+
+    height: 65vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
+
 
 .waves {
-  position: relative;
-  width: 100%;
-  height: 15vh;
-  margin-bottom: -7px;
-  /*Fix for safari gap*/
-  min-height: 100px;
-  max-height: 150px;
+
+    position: relative;
+    width: 100%;
+    height: 15vh;
+    margin-bottom: -7px;
+    /*Fix for safari gap*/
+    min-height: 100px;
+    max-height: 150px;
 }
 
+
 .content {
-  position: relative;
-  height: 20vh;
-  text-align: center;
-  background-color: white;
+
+    position: relative;
+    height: 20vh;
+    text-align: center;
+    font-size: 25px;
+
+
+
 }
 
 .flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
+
+.yhcard {
+    border-radius: 15vh;
+    border-style: dashed;
+    border-color: #FE574B;
+    border-width: 3px;
+    border-radius: 5vh;
+    margin: 0 5% 0 5%;
+    padding: 5px 25px 5px 25px;
+
+}
+
 
 /* Animation */
 
-.parallax > use {
-  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+.parallax>use {
+    animation: move-forever 25s cubic-bezier(.55, .5, .45, .5) infinite;
 }
 
-.parallax > use:nth-child(1) {
-  animation-delay: -2s;
-  animation-duration: 7s;
+.parallax>use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
 }
 
-.parallax > use:nth-child(2) {
-  animation-delay: -3s;
-  animation-duration: 10s;
+.parallax>use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
 }
 
-.parallax > use:nth-child(3) {
-  animation-delay: -4s;
-  animation-duration: 13s;
+.parallax>use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
 }
 
-.parallax > use:nth-child(4) {
-  animation-delay: -5s;
-  animation-duration: 20s;
+.parallax>use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
 }
+
 
 @keyframes move-forever {
-  0% {
-    transform: translate3d(-90px, 0, 0);
-  }
+    0% {
+        transform: translate3d(-90px, 0, 0);
+    }
 
-  100% {
-    transform: translate3d(85px, 0, 0);
-  }
+    100% {
+        transform: translate3d(85px, 0, 0);
+    }
 }
+
 
 /*for mobile*/
 @media (max-width: 768px) {
-  .waves {
-    height: 40px;
-    min-height: 40px;
-  }
+    .waves {
+        height: 40px;
+        min-height: 40px;
+    }
 
-  .content {
-    height: 30vh;
-  }
+    .content {
+        height: 30vh;
+    }
 
-  h1 {
-    font-size: 24px;
-  }
+    h1 {
+        font-size: 24px;
+    }
 }
 
-.main > button {
-  width: 150px;
-  height: 50px;
-  background-color: #ffd653;
-  border: none;
-  color: black;
-  font-size: 18px;
-  font-weight: bold;
-  border-radius: 50px;
-}
 
-/* 연희 */
+
+/* 연희 끝 */
+
 
 /* mainPage cardSection */
 .mainCards {
